Update review and api to handle delegation
