# REST APIs Implementation/controllers/ReviewsController.js
@@ -149,3 +149,53 @@ module.exports.updateSingleReview = function updateSingleReview (req, res, next)
   }
 };
 
+module.exports.delegateReview = function delegateReview (req, res, next) {
+  
+  if(req.params.reviewerId != req.user.id)
+  {
+    utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The reviewerId is not equal the id of the requesting user.' }], }, 400);
+  }
+  else {
+    Reviews.delegateReview(req.body, req.params.filmId, req.params.reviewerId)
+    .then(function(response) {
+        utils.writeJson(res, response, 204);
+    })
+    .catch(function(response) {
+        if(response == 403){
+            utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The user is not a reviewer of the film or the review has already been delegated to another user.' }], }, 403);
+        }
+        else if(response == 409){
+          utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review has been already completed, so the review cannot be delegated anymore.' }], }, 409);
+        }
+        else if (response == 404){
+            utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review does not exist.' }], }, 404);
+        }
+        else {
+            utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': response }], }, 500);
+        }
+    });
+  }
+};
+
+module.exports.deleteDelegation = function deleteDelegation (req, res, next) {
+
+  Reviews.deleteDelegation(req.params.filmId, req.params.reviewerId, req.user.id)
+    .then(function (response) {
+      utils.writeJson(res, response, 204);
+    })
+    .catch(function (response) {
+      if(response == "403"){
+        utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The user is not the invited reviewer of the film' }], }, 403);
+      }
+      else if(response == "409"){
+        utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review has been already completed, so the invitation cannot be deleted anymore.' }], }, 409);
+      }
+      else if (response == 404){
+        utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review does not exist.' }], }, 404);
+      }
+      else {
+        utils.writeJson(res, {errors: [{ 'param': 'Server', 'msg': response }],}, 500);
+      }
+    });
+};
+
